Cap Nhat diem HoiDap

--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -84,7 +84,7 @@
                                 <ul>
                                     <li><a href="/NguoiDung/Xem/@Session["NguoiDung"]"><i class="pe-7s-user"></i><span>Thông tin cá nhân</span></a></li>
                                     <li><a href="#"><i class="pe-7s-config"></i><span>Cài đặt</span></a></li>
-                                    <li><a href="/NguoiDung/xuLyDangXuat"><i class="pe-7s-power"></i><span>Thoát</span></a></li>
+                                    <li><a href="/NguoiDung/XuLyDangXuat"><i class="pe-7s-power"></i><span>Thoát</span></a></li>
                                 </ul>
                             </div>
                         </li>
