--- a/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
@@ -11,6 +11,7 @@
         Model.tieuDe, "/HoiDap/Xem/" + Model.ma
     };
 
+    <!--Kiểm tra điều kiện-->
     int? maNguoiDung = (int?)Session["NguoiDung"];
     string[] dsQuyen;
 
@@ -34,6 +35,7 @@
             "Thêm câu hỏi", "href='/HoiDap/ThemCauHoi'"
         };
     }
+    <!---->
     
     Dictionary<int, int> trangThaiVoteTraLoi = ViewData["DSTrangThaiVoteTraLoi"] as Dictionary<int, int>;
 }
@@ -88,7 +90,7 @@
         @if (coQuyenTraLoiCauHoi)
         {
             <section class="noi-dung">             
-                   @Html.Partial("~/Views/HoiDap/_Form_TraLoi.cshtml", null, new ViewDataDictionary() { { "MaCauHoi", ViewData["MaCauHoi"] } })
+                   @Html.Partial("~/Views/HoiDap/_Form_TraLoi.cshtml", null, new ViewDataDictionary() { { "MaCauHoi", Model.ma } })
             </section>                   
         }
         else
