--- a/LCTMoodle/Views/BinhLuan/_Item.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Item.cshtml
@@ -33,7 +33,7 @@
         {
             <section class="tap-tin">
                 <a href="/LayTapTin/BinhLuan_@(Model.loaiDoiTuong)_TapTin/@Model.tapTin.ma">
-                    <img src="/LayTapTin/BinhLuan_@(Model.loaiDoiTuong)_TapTin/@Model.tapTin.ma" />
+                    <img src="/LayHinh/BinhLuan_@(Model.loaiDoiTuong)_TapTin/@Model.tapTin.ma" />
                     <span>@Model.tapTin.ten</span>
                 </a>
             </section>
