--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -82,7 +82,7 @@
     chucNang.Add("Chương trình khóa học");
     chucNang.Add("href='/KhoaHoc/ChuongTrinh/" + Model.ma + "'");
 
-    if (QuyenHelper.co(dsQuyen, "QLCotDiem"))
+    if (QuyenHelper.co(dsQuyen, "QLBangDiem"))
     {
         chucNang.Add("Quản lý bảng điểm");
         chucNang.Add("href='/KhoaHoc/Tao-BangDiem/" + Model.ma + "'");
