--- a/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
+++ b/LCTMoodle/Views/Quyen/QuyenKhoaHoc.cshtml
@@ -30,7 +30,7 @@
     chucNang.Add("Chương trình khóa học");
     chucNang.Add("href='/KhoaHoc/ChuongTrinh/" + khoaHoc.ma + "'");
 
-    if (QuyenHelper.co(dsQuyen, "QLCotDiem"))
+    if (QuyenHelper.co(dsQuyen, "QLBangDiem"))
     {
         chucNang.Add("Quản lý bảng điểm");
         chucNang.Add("href='/KhoaHoc/Tao-BangDiem/" + khoaHoc.ma + "'");
