--- a/LCTMoodle/Views/BaiVietBaiTap/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Form.cshtml
@@ -89,8 +89,8 @@
                     <label>Thông tin cột điểm</label>
                 </section>
                 <section class="noi-dung">
-                    <article class="input">
-                        <input @(Model != null ) type="text" name="CD_HeSo" data-validate="so-nguyen" placeholder="Hệ số" data-doi-tuong="diem" />
+                    <article class="input" data-chi-an data-doi-tuong="diem">
+                        <input type="text" name="CD_HeSo" data-validate="so-nguyen" placeholder="Hệ số" />
                     </article>
                 </section>
             </li>
