--- a/LCTMoodle/Views/BangDiem/Tao.cshtml
+++ b/LCTMoodle/Views/BangDiem/Tao.cshtml
@@ -46,11 +46,11 @@
     </script>
 }
 
-<section class="hop hop-1-vien">
+<section class="hop hop-1-vien" id="khung_cot_diem">
     <section class="tieu-de">
         Quản lý cột điểm
     </section>
-    <section id="khung_cot_diem" class=" noi-dung khung-quan-ly">
+    <section class=" noi-dung khung-quan-ly">
         <table class="khung-cot-diem lct-bang">
             <thead>
                 <tr>
@@ -78,9 +78,9 @@
                     }
                 }
             </tbody>
-            </table>
-            <section class="lct-form khung-nut" style="text-align: center;">
-                <a data-chuc-nang="tao" class="button">Thêm cột điểm mới</a>
-            </section>
+        </table>
+    </section>
+    <section class="lct-form khung-nut" style="text-align: center;">
+        <a data-chuc-nang="tao" class="button">Thêm cột điểm mới</a>
     </section>
 </section>
