--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -571,8 +571,11 @@ body.khong-scroll > .khung {
     }
     
 
-@keyframes mo-popup-full { 
+@keyframes mo-popup-full {
     0% {
+        background-color: transparent;
+    }
+    50% {
         background-color: rgba(0, 0, 0, 0);
     }
     100% {
@@ -592,7 +595,7 @@ body.khong-scroll > .khung {
     }
 
         .popup-full-container.popup-mo .popup-full {
-            animation: mo-popup-full 0.5s;
+            animation: mo-popup-full 0.3s;
         }
 
 @keyframes mo-popup-noi-dung { 
@@ -606,9 +609,8 @@ body.khong-scroll > .khung {
     }
 }
 
-        .popup-full-container .popup-full .khung-noi-dung {
+        .popup-full-container > .popup-full > .khung-noi-dung {
             text-align: left;
-            display: inline-block;
             max-width: 90vw;
             max-height: 90vh;
             background-color: #f5f5f5;
@@ -619,8 +621,8 @@ body.khong-scroll > .khung {
             overflow-x: hidden;
         }
 
-            .popup-full-container.popup-mo .popup-full .khung-noi-dung {
-                animation: mo-popup-noi-dung 0.5s;
+            .popup-full-container.popup-mo  > .popup-full > .khung-noi-dung {
+                animation: mo-popup-noi-dung 0.3s;
             }
 
 /*#endregion */
